--- a/accounts.yml
+++ b/accounts.yml
@@ -1,7 +1,7 @@
 locale: ua-UA
 translations:
   - key: accounts.error_incorrect_password
-    t: Некорректный пароль
+    t: Невірний пароль
   - key: accounts.error_email_required
     t: Введіть електронну пошту
   - key: accounts.error_email_already_exists
@@ -13,9 +13,9 @@ translations:
   - key: accounts.error_unknown
     t: Невідома помилка
   - key: accounts.error_user_not_found
-    t: Користувач не знайдений
+    t: Користувача не знайдено
   - key: accounts.error_username_already_exists
-    t: Аккаунт з таким іменем вже зареєстрований
+    t: Аккаунт з таким логіном вже зареєстровано
   - key: accounts.enter_username_or_email
     t: Введіть логін або пошту
   - key: accounts.error_internal_server_error
@@ -54,22 +54,34 @@ translations:
     t: Зареєструватися
   - key: accounts.sign_in
     t: Увійти
+  - key: accounts.switch_to_sign_up
+    t: Немає акаунта ? Зареєструватися
+  - key: accounts.switch_to_sign_in
+    t: Вже є акаунт ? Увійти
   - key: accounts.sign_out
     t: Вийти
   - key: accounts.cancel
-    t: Скасування
+    t: Скасувати
   - key: accounts.info_email_sent
     t: Електронний лист надіслано.
   - key: accounts.info_password_changed
-    t: Пароль змінений.
+    t: Пароль змінено.
   - key: accounts.please_pick_password
     t: Будь ласка, придумайте новий пароль для продовження.
   - key: accounts.please_log_in
-    t: Авторизуйтесь або зареєструйтесь, щоб почати опитування.
+    t: Увійдіть або зареєструйтесь, щоб почати опитування.
   - key: accounts.logged_in_as
-    t: Ви авторизовані як {email}
+    t: Ви увійшли як {email}
+  - key: accounts.logged_in_as_guest
+    t: Ви увійшли як Гість
   - key: accounts.questions
     t: >
-        Якщо у вас є питання з приводу того, як будуть використані ваші відповіді, або ви хочете
-        видалити їх з нашої бази даних,
-        будь ласка, <a href="mailto:hello@stateofjs.com">напишіть нам</a>.
+      Якщо у вас є питання з приводу того, як будуть використані ваші дані, або ви хочете
+      видалити їх з нашої бази даних,
+      будь ласка, <a href="mailto:hello@stateofjs.com">напишіть нам</a>.
+
+  - key: accounts.token_verified
+    t: Перевірка токена успішна, перенаправляємо…
+
+  - key: accounts.your_surveys
+    t: Ваші Опитування
